firebase integration + submiting data

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <button class="btn-large pink white-text">Tambah Data</button>
                         </div>
                         <div class="input-field center">
-                            <p class="red-text" id="error">text</p>
+                            <p class="red-text" id="error"></p>
                         </div>
                     </div>
                 </form>
@@ -57,7 +57,7 @@
     </div>
     <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-firestore-compat.js"></script>
-    <script type="module">
+    <script>
 
         const firebaseConfig = {
             apiKey: "AIzaSyABR-DA0sLCtDY3NzF44Vty54IceL0CeQA",
