membuat tooltip dan finishing

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     header {
         margin-bottom: 40px;
     }
+    .delete {
+        color: hotpink;
+    }
 </style>
 
 <body class="indigo">
